--- a/side-projects/park-visit-log/privacy-policy/index.html
+++ b/side-projects/park-visit-log/privacy-policy/index.html
@@ -25,25 +25,28 @@
         <!-- Policy Header -->
         <div class="policy-header">
             <h1>Privacy Policy</h1>
-            <p class="effective-date">Effective Date: February 23, 2026</p>
+            <p class="effective-date">Effective Date: February 24, 2026</p>
         </div>
 
         <!-- Intro -->
         <p class="policy-intro">
-            This Privacy Policy describes how Jon Wyatt ("we", "us", or "our") collects, uses, and
-            protects your information when you use the Park Visit Log mobile application (the "App").
-            We are committed to protecting your privacy and ensuring your experience is secure.
+            This Privacy Policy describes how Jon Wyatt (&ldquo;we&rdquo;, &ldquo;us&rdquo;, or
+            &ldquo;our&rdquo;) handles your information when you use the Park Visit Log mobile
+            application (the &ldquo;App&rdquo;). Park Visit Log is designed with your privacy as a
+            priority &mdash; your personal data stays on your device and is never collected or
+            transmitted by us.
         </p>
 
         <!-- Section 1 -->
         <div class="policy-section">
             <p class="policy-section__number">Section 1</p>
-            <h2 class="policy-section__title">Information We Collect</h2>
+            <h2 class="policy-section__title">On-Device Data Storage</h2>
             <p class="policy-section__body">
-                <strong>Anonymized Usage Data:</strong> To understand how our App is used and to identify
-                popular destinations, we collect anonymized, aggregated data regarding which National Parks
-                users are tracking or visiting within the App. This data is strictly statistical and is not
-                linked to your identity, name, email address, or specific device.
+                All data you create in Park Visit Log &mdash; including visit logs, dates, notes, photos,
+                wishlists, and achievements &mdash; is stored exclusively on your device using Apple&rsquo;s
+                SwiftData framework. We do not operate servers that receive, store, or process your personal
+                data. Your visit history never leaves your device unless you explicitly choose to export it
+                using the app&rsquo;s built-in backup feature, which saves a file to a location you control.
             </p>
         </div>
 
@@ -52,11 +55,13 @@
         <!-- Section 2 -->
         <div class="policy-section">
             <p class="policy-section__number">Section 2</p>
-            <h2 class="policy-section__title">How We Use Your Information</h2>
+            <h2 class="policy-section__title">Information We Do Not Collect</h2>
             <p class="policy-section__body">
-                We use the anonymized data we collect to analyze trends, see which parks are most popular
-                among our user base, improve the App's features and user experience, and make informed
-                decisions about future updates and content additions.
+                Park Visit Log does not collect, transmit, or store any personal information, usage
+                analytics, crash reports, or device identifiers. We do not use any analytics SDKs,
+                advertising frameworks, or tracking technologies. We have no mechanism to know which
+                parks you have visited, how often you use the App, or any other details about your
+                activity.
             </p>
         </div>
 
@@ -65,13 +70,14 @@
         <!-- Section 3 -->
         <div class="policy-section">
             <p class="policy-section__number">Section 3</p>
-            <h2 class="policy-section__title">Data Sharing and Disclosure</h2>
+            <h2 class="policy-section__title">Third-Party Services</h2>
             <p class="policy-section__body">
-                We do not sell, trade, or rent any personal information to third parties. We may share
-                anonymized, aggregated park tracking statistics (which contain no personally identifiable
-                information) with prospective buyers, investors, or the general public. We may also disclose
-                your information if required to do so by law or in response to valid requests by public
-                authorities.
+                The App connects to the National Park Service Data API
+                (https://developer.nps.gov/api/v1) to retrieve publicly available park information
+                such as alerts, operating hours, entrance fees, and gallery photos. These requests
+                include only a park code (e.g., &ldquo;yose&rdquo; for Yosemite) and an API key &mdash;
+                no personal data, device identifiers, or location information is sent. No other
+                third-party services, analytics platforms, or advertising networks are used.
             </p>
         </div>
 
@@ -80,12 +86,13 @@
         <!-- Section 4 -->
         <div class="policy-section">
             <p class="policy-section__number">Section 4</p>
-            <h2 class="policy-section__title">Third-Party Services</h2>
+            <h2 class="policy-section__title">Location Data</h2>
             <p class="policy-section__body">
-                The App may use third-party services (such as Apple's standard App Store analytics or
-                independent crash reporting tools) that may collect information used to identify your
-                device for troubleshooting purposes. These third-party service providers have their own
-                privacy policies.
+                Park Visit Log requests access to your location only while you are using the App
+                (&ldquo;When In Use&rdquo;). Your location is used for two purposes: displaying your
+                position on the in-app map and determining whether you are inside a national park
+                boundary for the check-in feature. Location processing happens entirely on your device.
+                Your coordinates are never transmitted to our servers or to any third party.
             </p>
         </div>
 
@@ -94,11 +101,13 @@
         <!-- Section 5 -->
         <div class="policy-section">
             <p class="policy-section__number">Section 5</p>
-            <h2 class="policy-section__title">Data Security</h2>
+            <h2 class="policy-section__title">Notifications</h2>
             <p class="policy-section__body">
-                We implement reasonable security measures to protect against unauthorized access, alteration,
-                or destruction of the anonymized data we collect. However, no method of transmission over
-                the internet or electronic storage is 100% secure.
+                With your permission, Park Visit Log may send local notifications to alert you about
+                danger warnings or park closures at parks you have visited. These notifications are
+                generated entirely on your device based on publicly available alert data retrieved
+                from the National Park Service API. No notification data is sent to or processed by
+                external servers.
             </p>
         </div>
 
@@ -107,11 +116,12 @@
         <!-- Section 6 -->
         <div class="policy-section">
             <p class="policy-section__number">Section 6</p>
-            <h2 class="policy-section__title">Children's Privacy</h2>
+            <h2 class="policy-section__title">Children&rsquo;s Privacy</h2>
             <p class="policy-section__body">
-                Our App does not knowingly collect personally identifiable information from children under
-                the age of 13. If you are a parent or guardian and believe your child has provided us with
-                personal information, please contact us so we can take necessary actions.
+                Because Park Visit Log does not collect any personal information from any user, it
+                does not knowingly collect information from children under the age of 13. The App
+                contains no account creation, no data collection forms, and no mechanisms for
+                transmitting personal data.
             </p>
         </div>
 
@@ -122,9 +132,9 @@
             <p class="policy-section__number">Section 7</p>
             <h2 class="policy-section__title">Changes to This Privacy Policy</h2>
             <p class="policy-section__body">
-                We may update our Privacy Policy from time to time. We will notify you of any changes by
-                updating the Effective Date at the top of this page and, if the changes are significant,
-                by providing a prominent notice within the App.
+                We may update our Privacy Policy from time to time. We will notify you of any changes
+                by updating the Effective Date at the top of this page and, if the changes are
+                significant, by providing a prominent notice within the App.
             </p>
         </div>
 
